--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -18,8 +18,8 @@
         "format-icons": {
         "1": "", // dev
         "2": "", // config
-        "3": "", // 3dmodel
-        "4": "", // draw
+        "3": "", // creative
+        "4": "", // calendar
         "5": "", // status
         "6": "", // read
         "7": "", // music
