Changed back to rofi
Moved back to rofi and slightly modified rofi visuals

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,8 +29,8 @@ bindsym $mod+Shift+Return exec st
 
 
 # start rofi (a program launcher)
-#bindsym $mod+d exec rofi -font "mononoki 11.5" -lines 12 -width 33 -location 2 -yoffset 21 -show drun -modi drun -terminal alacritty
-bindsym $mod+p exec dmenu_run -fn "mononoki-10.5"
+bindsym $mod+p exec rofi -show drun
+#bindsym $mod+p exec dmenu_run -fn "mononoki-10.5"
 
 #########################
 #     Window Control	#
