--- a/.config/sway/config
+++ b/.config/sway/config
@@ -61,7 +61,7 @@ bindsym $mod+Shift+q kill
 # Menu
 # start rofi (a program launcher)
 #bindsym $mod+d exec rofi -font "mononake 11.5" -lines 12 -width 33 -location 2 -yoffset 21 -show drun -modi drun -terminal alacritty
-bindsym $mod+p exec dmenu_run -fn "mononoki-10.5"
+bindsym $mod+p exec rofi -show drun
 
 # change focus
 bindsym $mod+h focus left
