--- a/.config/i3/config
+++ b/.config/i3/config
@@ -235,4 +235,4 @@ exec --no-startup-id xinput set-prop 12 "libinput Natural Scrolling Enabled" 1
 exec setxkbmap -layout us,ru -option 'grp:toggle'
 
 # Compositor
-exec --no-startup-id picom
+exec --no-startup-id xcompmgr -C -c -r 0 &
