Polybar bar color change

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -30,7 +30,7 @@ alert = #bd2c40
 white  = #F4FFFD
 ebony  = #63624F
 black  = #260C1A
-gray1  = #222222
+gray1  = #32302f
 green  = #9BC53D
 blue   = #4A5899
 cyan   = #559CAD
