--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,5 +1,5 @@
 [Appearance]
-color_scheme_path=/usr/share/qt5ct/colors/darker.conf
+color_scheme_path=/home/sungrow/.config/qt5ct/colors/gruvbox.conf
 custom_palette=true
 icon_theme=ePapirus
 standard_dialogs=default
@@ -24,5 +24,8 @@ toolbutton_style=4
 underline_shortcut=1
 wheel_scroll_lines=3
 
+[PaletteEditor]
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x82\0\0\x1\x11\0\0\x4\xfc\0\0\x3%\0\0\x2\x84\0\0\x1\x13\0\0\x4\xfa\0\0\x3#\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x84\0\0\x1\x13\0\0\x4\xfa\0\0\x3#)
+
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x16\0\0\x3\xe3\0\0\x4\x34\0\0\0\x5\0\0\0\x18\0\0\x3\xe1\0\0\x4\x32\0\0\0\0\0\0\0\0\a\x80\0\0\0\x5\0\0\0\x18\0\0\x3\xe1\0\0\x4\x32)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x3\0\0\0\x16\0\0\a|\0\0\x4\x34\0\0\0\x5\0\0\0\x18\0\0\az\0\0\x4\x32\0\0\0\0\0\0\0\0\a\x80\0\0\0\x5\0\0\0\x18\0\0\az\0\0\x4\x32)
