--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -99,9 +99,10 @@ label = %title:0:30:...%
 type = internal/xkeyboard
 blacklist-0 = num lock
 
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.white}
 format-prefix-underline = ${colors.red}
+format-prefix-font = 2
 
 label-layout = %layout%
 label-layout-underline = ${colors.red}
@@ -315,7 +316,7 @@ interval = 0.2
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.white}
 format-underline = #f90000
 label = %percentage:2%%
@@ -323,7 +324,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-prefix-foreground = ${colors.white}
 format-underline = #4bffdc
 label = %percentage_used%%
@@ -496,9 +497,11 @@ label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.red}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 ramp-foreground = ${colors.white}
 
 [module/powermenu]
