--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -25,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [PaletteEditor]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x82\0\0\x1\xa7\0\0\x4\xfc\0\0\x3\xbb\0\0\x2\x84\0\0\x1\xa9\0\0\x4\xfa\0\0\x3\xb9\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x84\0\0\x1\xa9\0\0\x4\xfa\0\0\x3\xb9)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x2\x85\0\0\x1\xa8\0\0\x4\xfd\0\0\x3\xba\0\0\x2\x86\0\0\x1\xa9\0\0\x4\xfc\0\0\x3\xb9\0\0\0\0\0\0\0\0\a\x80\0\0\x2\x86\0\0\x1\xa9\0\0\x4\xfc\0\0\x3\xb9)
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xe7\0\0\0\x16\0\0\a|\0\0\x2\x38\0\0\x3\xe9\0\0\0\x18\0\0\az\0\0\x2\x36\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xe9\0\0\0\x18\0\0\az\0\0\x2\x36)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3\xc2\0\0\0\x16\0\0\a}\0\0\x4\x35\0\0\x3\xc3\0\0\0\x17\0\0\a|\0\0\x4\x34\0\0\0\0\0\0\0\0\a\x80\0\0\x3\xc3\0\0\0\x17\0\0\a|\0\0\x4\x34)
