--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -66,7 +66,10 @@ module-margin-right = 2
 
 font-0 = jetbrainsmono:size=8;1
 font-1 = siji:size=10;1
-font-2 = symbolsnerdfont:size=8;2
+font-2 = "Symbols Nerd Font:size=8;2"
+font-3 = "Font Awesome 5 Brands Regular:style=Regular:size=10;3"
+font-4 = "Font Awesome 5 Free Solid:style=Solid:size=10;3"
+font-5 = "Font Awesome 5 Free Regular:style=Regular:size=10;3"
 
 
 modules-left = wlan memory cpu temperature 
@@ -344,11 +347,8 @@ format-disconnected =
 ;label-disconnected = %ifname% disconnected
 ;label-disconnected-foreground = ${colors.white}
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = 睊
+ramp-signal-1 = 直
 ramp-signal-foreground = ${colors.white}
 
 [module/eth]
