--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,15 +1,37 @@
+# https://github.com/yshui/picom/blob/next/picom.sample.conf
+# Shadows
 shadow = false;
-no-dock-shadow = true;
+
+# Fading
+fading = false;
+
+# Transparency / Opacity
+inactive-opacity = 0.95;
+frame-opacity = 0.95;
+inactive-opacity-override = false;
+
+# Background-blurring
 
 blur-background = false;
 blur-background-frame = false;
 blur-background-fixed = false;
+
+# General
+#backend = "xrender";
+#backend = "xr_glx_hybrid"
+backend = "glx";
+vsync = true;
+refresh-rate = 0;
+unredir-if-possible = false;
+detect-transient = true;
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+no-use-damage = false;
+
+
 inactive-dim-fixed = true;
 
-fading = false;
-#refresh-rate = 60;
-vsync = true;
+no-fading-openclose = true
+
 
 daemon = true;
-backend = "glx";
-#backend = "xrender";
