--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,7 +25,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl -s -q s 5%-
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Shift+Return exec st
+bindsym $mod+Shift+Return exec $TERMINAL
 
 
 # start rofi (a program launcher)
