--- a/.config/sway/config
+++ b/.config/sway/config
@@ -53,7 +53,7 @@ bindsym XF86MonBrightnessDown exec brightnessctl s 5%- # decrease screen brightn
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st
+bindsym $mod+Shift+Return exec $TERMINAL
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -116,7 +116,7 @@ bindsym Print exec grim ~/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png
 bindsym $mod+Print exec grim -g "$(slurp)" ~/screenshots/$(date +%Y-%m-%d_%H-%M-%S).png
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
