--- a/.config/i3/config
+++ b/.config/i3/config
@@ -222,7 +222,7 @@ exec_always ~/.config/polybar/init.sh
 #       App Init        #
 #########################
 
-exec --no-startup-id hsetroot -root -cover $(~/.wallpaper/rand.sh)
+exec --no-startup-id hsetroot -root -cover $(~/.wallpaper/rand.sh .)
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
@@ -238,3 +238,5 @@ exec setxkbmap -layout us,ru -option 'grp:toggle'
 # Compositor
 #exec --no-startup-id xcompmgr &
 exec --no-startup-id picom &
+
+exec --no-startup-di xss-lock -- i3lock -n -i $(~/.wallpaper/rand.sh .png) &
