--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,8 +11,8 @@ font JetBrains Mono 8
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- swaylock --nofork
-output "*" bg ~/.wallpaper/wpe.jpg fill
+exec --no-startup-id xss-lock --transfer-sleep-lock -- swaylock --nofork -i $(~/.wallpaper/rand.sh .png)
+output "*" bg $(~/.wallpaper/rand.sh .) fill
 
 # Natural scrolling
 
