Neovim csharp support

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -9,6 +9,14 @@ fading = false;
 inactive-opacity = 0.95;
 frame-opacity = 0.95;
 inactive-opacity-override = false;
+focus-exclude = [
+	"class_g = 'xss-lock'",
+	"class_g = 'xss-lock' && argb",
+	"name *= 'xss-lock'",
+	"name = 'xss-lock'",
+	"class_g ?= 'xss-lock'",
+	"! name~=''"
+	];
 
 # Background-blurring
 
