--- a/.config/sway/config
+++ b/.config/sway/config
@@ -11,7 +11,8 @@ font JetBrains Mono 8
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- swaylock --nofork -i $(~/.wallpaper/rand.sh .png)
+# exec --no-startup-id xss-lock --transfer-sleep-lock -- swaylock --nofork -i $(~/.wallpaper/rand.sh .png)
+exec --no-startup-id betterlockscreen -- swaylock --fx color -u $(~/.wallpaper/rand.sh .) -w
 output "*" bg $(~/.wallpaper/rand.sh .) fill
 
 # Natural scrolling
@@ -54,6 +55,9 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Shift+Return exec $TERMINAL
+
+# start a file manager
+bindsym $mod+i exec thunar
 
 # kill focused window
 bindsym $mod+Shift+q kill
