--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,7 +28,7 @@ floating_modifier $mod
 bindsym $mod+Shift+Return exec $TERMINAL
 
 # start a file manager
-bindsym $mod+i exec thunar
+bindsym $mod+i exec $FILE
 
 
 # start rofi (a program launcher)
